[tool.poetry]
name = "grpctunnel"
version = "0.1.0"
description = ""
authors = ["Monotosh Das <monotosh.das@videonetics.com>"]
readme = "README.md"
packages = [{include = "grpctunnel"}]

[tool.poetry.dependencies]
python = ">=3.8"
grpcio = "^1.59.3"
grpcio-status = "^1.59.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
grpcio-tools = "^1.59.3"
ruff = "^0.1.7"
mypy = "^1.7.1"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
